Fix text overlapping

--- a/site/index.css
+++ b/site/index.css
@@ -10,7 +10,7 @@
 .question, .explanations {
   font-family: 'Gloria Hallelujah', cursive;
   font-size: 3vh;
-  line-height: 0.5em;
+  line-height: 1.2em;
 }
 
 .yes {
